<resources>
    <string name="app_name">pae docs</string>
    <string name="select_files">Add a new document</string>
    <string name="login_page">Login</string>
    <string name="if_doc_app">ifDoc App</string>
    <string name="username">username</string>
    <string name="prompt_password">password</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="label_email">Email</string>
    <string name="password">password</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="no_account">DON\'T HAVE A ACCOUNT</string>
    <string name="terms_of_use">TERMS OF USE</string>
    <string name="start_login">Let\'s go</string>
    <string name="doc_icon">doc icon image</string>
    <string name="no_connection">You are not connected with a network or your current network does not have internet access</string>
    <string name="checking_connection">Please wait, checking your internet connection.</string>
    <string name="message_wait">Please wait</string>
    <string name="register_failure">Failed to register user, please try again</string>
    <string name="label_name">Name</string>
    <string name="label_password">Password</string>
    <string name="error_email">Invalid email, please try again.</string>
    <string name="label_description">Description</string>
    <string name="label_document_type">Type</string>
    <string name="required_permissions">Permissions are required for the application to work properly</string>
    <string name="choose_option_attachment">Please, choose the source</string>
    <string name="add_a_new_document">Add new document</string>
    <string name="fail_to_attach_image">Failure to attach image</string>
    <string name="all_fields_are_required">Atention, all fields are required.</string>
    <string name="all_fields_are_required_and_documents">Atention, all fields are required. Please attach or take a picture from yout gallery and fill all forms fields</string>
    <string name="create_user">Register your account</string>
    <string name="hello_user">Hello,</string>
    <string name="hello_user_icon">Hello user icon</string>
    <string name="more_actions_button">More actions button</string>
    <string name="no_documents_for_user_layout">No document for users layout</string>
    <string name="pending_action">Pending Actions</string>
    <string name="all_documents">All documents</string>
    <string name="document_label">Document</string>
    <string name="status_label">Pending</string>
    <string name="date_label">15/10/2018</string>
    <string name="document_details">Details</string>
    <string name="document_status">Status</string>
    <string name="status_pending">Pending</string>
    <string name="label_attachment">Attachment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="unable_to_delete">This document is already validated, unable to delete</string>
    <string name="edit_document">Edit document</string>
    <string name="app_name_terms">Terms of Use</string>
    <string name="app_name_term">Terms of Use and Conditions</string>
    <string name="terms_info">By sign in you accept our Terms and Conditions</string>
    <string name="label_prontuario">Prontuário</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="warning">Attention</string>
    <string name="logout_warning">Are you sure you want to logout ?</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="invalid_email">Invalid email, please try again</string>
    <string name="failed_to_create_user">Falha ao criar uma nova conta. \n Motivo : </string>
    <string name="failed_to_autenticated">Invalid credentials, please try again</string>
    <string name="success_creating_user">Your account was create, please login to start use the app.</string>
    <string name="success_creating_document">Your document was created.</string>
    <string name="document_deleted">Your document was deleted.</string>
    <string name="available_until">Available until:  %s</string>
    <string name="edict_name">Edict : %s</string>
    <string name="no_edicts_available">No edict available right now, check later !</string>
</resources>
