<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/documentCard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/hello_user_icon"
            android:padding="2dp"
            android:src="@drawable/ic_folder_black_24dp" />

        <TextView
            android:id="@+id/documentType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/document_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/documentDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/date_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/documentStatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/status_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/moreOptionsDocument"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/more_actions_button"
            android:padding="2dp"
            android:src="@drawable/ic_more_vert_black_24dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>