<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.user.auth.AuthFragment">

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/docIcon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/doc_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/docs" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_login_form_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            app:cardBackgroundColor="@color/color_app_blue"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:id="@+id/linearLayout_login_form_inputs"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_login_icon"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/ic_account_circle_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_email"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_login_form_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/color_app_blue"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:id="@+id/linearLayout_login_form_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/passwordIcon"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/ic_lock_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:maxLines="1"
                        android:text="@string/password"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/color_app_blue"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">


            <TextView
                android:id="@+id/startLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/start_login"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/color_app_blue"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">


            <TextView
                android:id="@+id/noAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/no_account"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/terms_of_use"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_portable_wifi_off" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/no_connection"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/checkConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_replay_black" />
    </LinearLayout>

</LinearLayout>
